# bluesky-be-test

./: README.md  pokemon.db  pokemon_api_collection.json  pyproject.toml
src/: database.py  main.py  model.py  scraper.py
