[tool.poetry]
name = "pokemon-api"
version = "0.0.1"
description = "A Pokemon scraper and API following JSON:API standards"
authors = ["Mochamad Iqbal <moch.iqbaldc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"  # Popular, lightweight web framework
uvicorn = "^0.25.0"  # ASGI server for FastAPI
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"  # Code formatter
flake8 = "^7.0.0"  # Linter
pytest = "^7.4.4"  # Testing framework

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"